--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -97,6 +97,9 @@
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="Game\config.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
