--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Defs.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="FadeToBlack.h" />
     <ClInclude Include="Fonts.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ModuleEntityManager.h" />
@@ -90,10 +91,12 @@
     <ClInclude Include="PerfTimer.h" />
     <ClInclude Include="SString.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="TitleScreen.h" />
     <ClInclude Include="UI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="FadeToBlack.cpp" />
     <ClCompile Include="Fonts.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -108,6 +111,7 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="PerfTimer.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="TitleScreen.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
