EntityManager working & pxBody and World

--- a/Physics II - 2D Template/SDL Game.vcxproj.filters
+++ b/Physics II - 2D Template/SDL Game.vcxproj.filters
@@ -12,6 +12,9 @@
     <Filter Include="Header Files\Containers">
       <UniqueIdentifier>{97c4111e-b102-4ba8-9053-6f07ccbbe3d4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Physics">
+      <UniqueIdentifier>{d1801692-0a4c-4b2d-95a3-e6d38655f29f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
