--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -88,6 +88,8 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
+    <ClInclude Include="pxBody.h" />
+    <ClInclude Include="pxWorld.h" />
     <ClInclude Include="SString.h" />
     <ClInclude Include="TitleScreen.h" />
     <ClInclude Include="UI.h" />
