--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -75,8 +75,10 @@
     <ClInclude Include="FadeToBlack.h" />
     <ClInclude Include="Fonts.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="ModuleEnding.h" />
     <ClInclude Include="ModuleEntityManager.h" />
     <ClInclude Include="ModulePhysics.h" />
+    <ClInclude Include="ModuleWeapon.h" />
     <ClInclude Include="p2List.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
@@ -99,6 +101,7 @@
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
+    <ClCompile Include="ModuleEnding.cpp" />
     <ClCompile Include="ModuleEntityManager.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModulePhysics.cpp" />
@@ -106,6 +109,7 @@
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleSceneIntro.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
+    <ClCompile Include="ModuleWeapon.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="TitleScreen.cpp" />
     <ClCompile Include="UI.cpp" />
