--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -69,6 +69,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Defs.h" />
     <ClInclude Include="Entity.h" />
