--- a/Physics II - 2D Template/SDL Game.vcxproj.filters
+++ b/Physics II - 2D Template/SDL Game.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="ModuleWeapon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
