--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="ModuleEnding.h" />
     <ClInclude Include="ModuleEntityManager.h" />
     <ClInclude Include="ModulePhysics.h" />
+    <ClInclude Include="ModuleProjectile.h" />
     <ClInclude Include="ModuleWeapon.h" />
     <ClInclude Include="p2List.h" />
     <ClInclude Include="Module.h" />
@@ -107,6 +108,7 @@
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModulePhysics.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
+    <ClCompile Include="ModuleProjectile.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleSceneIntro.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
