--- a/Physics II - 2D Template/SDL Game.vcxproj
+++ b/Physics II - 2D Template/SDL Game.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Defs.h" />
+    <ClInclude Include="EndingScreen.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FadeToBlack.h" />
     <ClInclude Include="Fonts.h" />
@@ -98,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="EndingScreen.cpp" />
     <ClCompile Include="FadeToBlack.cpp" />
     <ClCompile Include="Fonts.cpp" />
     <ClCompile Include="log.cpp" />
