--- a/Physics II - 2D Template/SDL Game.vcxproj.filters
+++ b/Physics II - 2D Template/SDL Game.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="ModuleProjectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModulePlayerTwo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -149,6 +152,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ModuleProjectile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModulePlayerTwo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
